--- a/app_server/views/generic-text.jade
+++ b/app_server/views/generic-text.jade
@@ -8,8 +8,10 @@ block content
   .row
     .col-md-6.col-sm-12
       p
-        | Loc8r was created to help people find places to sit down and get a bit of work done.
+        |  Welcome to ORCHID, where our love for literature blooms.
         | <br /><br />
-        | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed lorem ac nisi dignissim accumsan. Nullam sit amet interdum magna. Morbi quis faucibus nisi. Vestibulum mollis purus quis eros adipiscing tristique. Proin posuere semper tellus, id placerat augue dapibus ornare. Aenean leo metus, tempus in nisl eget, accumsan interdum dui. Pellentesque sollicitudin volutpat ullamcorper.
+        |  Our Mission: To cultivate a global community of readers and authors, offering insightful reviews that not only evaluate the quality of books but also celebrate the diversity and richness of literary art.
         | <br /><br />
-        | Suspendisse tincidunt, lectus non suscipit pharetra, purus ipsum vehicula sapien, a volutpat mauris ligula vel dui. Proin varius interdum elit, eu porttitor quam consequat et. Quisque vitae felis sed ante fringilla fermentum in vitae sem. Quisque fermentum metus at neque sagittis imperdiet. Phasellus non laoreet massa, eu laoreet nibh. Pellentesque vel magna vulputate, porta augue vel, dapibus nisl. Phasellus aliquet nibh nec nunc posuere fringilla. Quisque sit amet dignissim erat. Nulla facilisi. Donec in sollicitudin ante. Cras rhoncus accumsan rutrum. Sed aliquet ligula dui, eget laoreet turpis tempor vitae.
+        |  Who We Are: ORCHID is a bouquet of passionate book lovers, critics, and literary enthusiasts. Founded in [Year], we realized that the world of literature is as vast and varied as nature itself. Just like the orchid flower, which represents beauty, strength, and uniqueness, each book holds a distinctive story, waiting to be told and heard.
+        | <br /><br />
+        |  What We Do: At ORCHID, we delve deep into the pages, bringing you unbiased, comprehensive, and engaging reviews spanning across genres, authors, and regions. From the latest bestsellers to hidden gems, our team is dedicated to guiding you through your next literary adventure.
