--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -5,11 +5,12 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/bootstrap/css/amelia.bootstrap.css')
+    
   body
     .navbar.navbar-default.navbar-fixed-top
       .container
         .navbar-header
-          a.navbar-brand(href='/') Loc8r
+          a.navbar-brand(href='/') Orchid
           button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-main')
             span.icon-bar
             span.icon-bar
@@ -23,6 +24,6 @@ html
       footer
         .row
           .col-xs-12
-            small &copy; Simon Holmes 2023
+            small &copy; Hasritha Reddy 2023
     script(src='/javascripts/jquery-1.11.1.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
