--- a/public/bootstrap/css/amelia.bootstrap.css
+++ b/public/bootstrap/css/amelia.bootstrap.css
@@ -250,7 +250,7 @@ table {
     page-break-inside: avoid;
   }
   img {
-    max-width: 100% !important;
+    max-width: 100%;
   }
   @page  {
     margin: 2cm .5cm;
@@ -303,10 +303,10 @@ html {
 
 body {
   font-family: "Cabin", Arial, sans-serif;
-  font-size: 14px;
+  font-size: 18px;
   line-height: 1.428571429;
   color: #ffffff;
-  background-color: #108a93;
+  background-color: #290460;
 }
 
 input,
@@ -362,7 +362,7 @@ img {
   max-width: 100%;
   padding: 4px;
   line-height: 1.428571429;
-  background-color: #108a93;
+  background-color: #290460;
   border: 1px solid #dddddd;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
@@ -377,7 +377,7 @@ hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 1px solid #0d747c;
+  border-top: 1px solid #290460;
 }
 
 .sr-only {
@@ -400,6 +400,8 @@ p {
   font-size: 16.099999999999998px;
   font-weight: 200;
   line-height: 1.4;
+  font-style: italic;
+  font-family:monospace;
 }
 
 @media (min-width: 768px) {
@@ -550,7 +552,7 @@ h4 small,
 .page-header {
   padding-bottom: 9px;
   margin: 40px 0 20px;
-  border-bottom: 1px solid #0d747c;
+  border-bottom: 1px solid #290460;
 }
 
 ul,
@@ -1502,12 +1504,12 @@ th {
   padding: 8px;
   line-height: 1.428571429;
   vertical-align: top;
-  border-top: 1px solid #0d747c;
+  border-top: 1px solid #290460;
 }
 
 .table thead > tr > th {
   vertical-align: bottom;
-  border-bottom: 2px solid #0d747c;
+  border-bottom: 2px solid #290460;
 }
 
 .table caption + thead tr:first-child th,
@@ -1520,11 +1522,11 @@ th {
 }
 
 .table tbody + tbody {
-  border-top: 2px solid #0d747c;
+  border-top: 2px solid #290460;
 }
 
 .table .table {
-  background-color: #108a93;
+  background-color: #290460;
 }
 
 .table-condensed thead > tr > th,
@@ -1537,7 +1539,7 @@ th {
 }
 
 .table-bordered {
-  border: 1px solid #0d747c;
+  border: 1px solid #290460;
 }
 
 .table-bordered > thead > tr > th,
@@ -1546,7 +1548,7 @@ th {
 .table-bordered > thead > tr > td,
 .table-bordered > tbody > tr > td,
 .table-bordered > tfoot > tr > td {
-  border: 1px solid #0d747c;
+  border: 1px solid #290460;
 }
 
 .table-bordered > thead > tr > th,
@@ -1556,12 +1558,12 @@ th {
 
 .table-striped > tbody > tr:nth-child(odd) > td,
 .table-striped > tbody > tr:nth-child(odd) > th {
-  background-color: #0f7f88;
+  background-color: #290460;
 }
 
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th {
-  background-color: #13a0aa;
+  background-color: #290460;
 }
 
 table col[class*="col-"] {
@@ -1587,7 +1589,7 @@ table th[class*="col-"] {
 .table > thead > tr.active > th,
 .table > tbody > tr.active > th,
 .table > tfoot > tr.active > th {
-  background-color: #0d747c;
+  background-color: #290460;
 }
 
 .table > thead > tr > td.success,
@@ -1665,7 +1667,7 @@ table th[class*="col-"] {
     margin-bottom: 15px;
     overflow-x: scroll;
     overflow-y: hidden;
-    border: 1px solid #0d747c;
+    border: 1px solid #290460;
   }
   .table-responsive > .table {
     margin-bottom: 0;
@@ -1723,7 +1725,7 @@ legend {
   line-height: inherit;
   color: #ffffff;
   border: 0;
-  border-bottom: 1px solid #0d747c;
+  border-bottom: 1px solid #290460;
 }
 
 label {
@@ -1810,7 +1812,7 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .form-control:focus {
-  border-color: #66afe9;
+  border-color: #290460;
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
@@ -2196,8 +2198,8 @@ fieldset[disabled] .btn-default.active {
 
 .btn-primary {
   color: #ffffff;
-  background-color: #ad1d28;
-  border-color: #ad1d28;
+  background-color: #8e104f;
+  border-color: #8e104f;
 }
 
 .btn-primary:hover,
@@ -2206,8 +2208,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #8a1720;
-  border-color: #79141c;
+  background-color: #8e104f;
+  border-color: #8e104f;
 }
 
 .btn-primary:active,
@@ -2231,8 +2233,8 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #ad1d28;
-  border-color: #ad1d28;
+  background-color: #8e104f;
+  border-color: #8e104f;
 }
 
 .btn-warning {
@@ -3384,7 +3386,7 @@ input[type="button"].btn-block {
 .dropdown-menu > li > a:focus {
   color: #ffffff;
   text-decoration: none;
-  background-color: #15b5c1;
+  background-color: #290460;
 }
 
 .dropdown-menu > .active > a,
@@ -3392,7 +3394,7 @@ input[type="button"].btn-block {
 .dropdown-menu > .active > a:focus {
   color: #ffffff;
   text-decoration: none;
-  background-color: #15b5c1;
+  background-color: #290460;
   outline: 0;
 }
 
@@ -4019,7 +4021,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  background-color: #15b5c1;
+  background-color: #290460;
 }
 
 .nav > li.disabled > a {
@@ -4037,7 +4039,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav .open > a,
 .nav .open > a:hover,
 .nav .open > a:focus {
-  background-color: #15b5c1;
+  background-color: #290460;
   border-color: #e8d069;
 }
 
@@ -4069,7 +4071,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .nav-tabs > li > a:hover {
-  border-color: transparent transparent #15b5c1;
+  border-color: transparent transparent #290460;
 }
 
 .nav-tabs > li.active > a,
@@ -4077,7 +4079,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav-tabs > li.active > a:focus {
   color: #ffffff;
   cursor: default;
-  background-color: #15b5c1;
+  background-color: #290460;
   border: 1px solid transparent;
   border-bottom-color: transparent;
 }
@@ -4127,7 +4129,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #ffffff;
-  background-color: #15b5c1;
+  background-color: #290460;
 }
 
 .nav-stacked > li {
@@ -4724,14 +4726,14 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
   color: #ffffff;
-  background-color: #d92432;
+  background-color: #8e104f;
 }
 
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
   color: #ffffff;
-  background-color: #d92432;
+  background-color: #8e104f;
 }
 
 .navbar-default .navbar-nav > .disabled > a,
@@ -4742,12 +4744,12 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-default .navbar-toggle {
-  border-color: #d92432;
+  border-color: #8e104f;
 }
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: #d92432;
+  background-color: #8e104f;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -4756,7 +4758,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-  border-color: #8e1821;
+  border-color: #8e1024;
 }
 
 .navbar-default .navbar-nav > .dropdown > a:hover .caret,
@@ -4769,7 +4771,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
   color: #ffffff;
-  background-color: #d92432;
+  background-color: #8e1024
 }
 
 .navbar-default .navbar-nav > .open > a .caret,
@@ -4938,7 +4940,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   padding: 8px 15px;
   margin-bottom: 20px;
   list-style: none;
-  background-color: #13a0aa;
+  background-color: #290460;
   border-radius: 4px;
 }
 
@@ -4975,7 +4977,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   margin-left: -1px;
   line-height: 1.428571429;
   text-decoration: none;
-  background-color: #13a0aa;
+  background-color: #290460;
   border: 1px solid transparent;
 }
 
@@ -5008,8 +5010,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
   z-index: 2;
   color: #ffffff;
   cursor: default;
-  background-color: #15b5c1;
-  border-color: #15b5c1;
+  background-color: #290460;
+  border-color: #290460;
 }
 
 .pagination > .disabled > span,
@@ -5018,7 +5020,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .pagination > .disabled > a:focus {
   color: #ffffff;
   cursor: not-allowed;
-  background-color: #13a0aa;
+  background-color: #290460;
   border-color: transparent;
 }
 
@@ -5123,7 +5125,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .pager li > span {
   display: inline-block;
   padding: 5px 14px;
-  background-color: #13a0aa;
+  background-color: #290460;
   border: 1px solid transparent;
   border-radius: 15px;
 }
@@ -5150,7 +5152,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .pager .disabled > span {
   color: #ffffff;
   cursor: not-allowed;
-  background-color: #13a0aa;
+  background-color: #290460;
 }
 
 .label {
@@ -5187,12 +5189,12 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .label-primary {
-  background-color: #ad1d28;
+  background-color: #8e1024;
 }
 
 .label-primary[href]:hover,
 .label-primary[href]:focus {
-  background-color: #81161e;
+  background-color: #8e1024;
 }
 
 .label-success {
@@ -5242,7 +5244,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   text-align: center;
   white-space: nowrap;
   vertical-align: baseline;
-  background-color: #ad1d28;
+  background-color: #8e1024;
   border-radius: 10px;
 }
 
@@ -5265,7 +5267,7 @@ a.badge:focus {
 a.list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
   color: #ffffff;
-  background-color: #ad1d28;
+  background-color: #8e1024;
 }
 
 .nav-pills > li > a > .badge {
@@ -5279,7 +5281,7 @@ a.list-group-item.active > .badge,
   font-weight: 200;
   line-height: 2.1428571435;
   color: inherit;
-  background-color: #0d747c;
+  background-color: #290460;
 }
 
 .jumbotron h1 {
@@ -5316,7 +5318,7 @@ a.list-group-item.active > .badge,
   max-width: 100%;
   padding: 4px;
   line-height: 1.428571429;
-  background-color: #108a93;
+  background-color: #290460;
   border: 1px solid #dddddd;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
@@ -5489,7 +5491,7 @@ a.thumbnail:focus {
   font-size: 12px;
   color: #ffffff;
   text-align: center;
-  background-color: #ad1d28;
+  background-color: #290460;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
           box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -5603,7 +5605,7 @@ a.thumbnail:focus {
   padding: 10px 15px;
   margin-bottom: -1px;
   background-color: transparent;
-  border: 1px solid #0d747c;
+  border: 1px solid #290460;
 }
 
 .list-group-item:first-child {
@@ -5636,7 +5638,7 @@ a.list-group-item .list-group-item-heading {
 a.list-group-item:hover,
 a.list-group-item:focus {
   text-decoration: none;
-  background-color: #15b5c1;
+  background-color: #290460;
 }
 
 .list-group-item.active,
@@ -5644,8 +5646,8 @@ a.list-group-item:focus {
 .list-group-item.active:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #15b5c1;
-  border-color: #0d747c;
+  background-color: #290460;
+  border-color: #290460;
 }
 
 .list-group-item.active .list-group-item-heading,
@@ -5672,7 +5674,7 @@ a.list-group-item:focus {
 
 .panel {
   margin-bottom: 20px;
-  background-color: #13a0aa;
+  background-color: #290460;
   border: 1px solid transparent;
   border-radius: 4px;
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
@@ -5759,7 +5761,7 @@ a.list-group-item:focus {
 }
 
 .panel > .panel-body + .table {
-  border-top: 1px solid #0d747c;
+  border-top: 1px solid #290460;
 }
 
 .panel-heading {
@@ -5781,8 +5783,8 @@ a.list-group-item:focus {
 
 .panel-footer {
   padding: 10px 15px;
-  background-color: #18cbd8;
-  border-top: 1px solid #0d747c;
+  background-color: #290460;
+  border-top: 1px solid #290460;
   border-bottom-right-radius: 3px;
   border-bottom-left-radius: 3px;
 }
@@ -5802,7 +5804,7 @@ a.list-group-item:focus {
 }
 
 .panel-group .panel-heading + .panel-collapse .panel-body {
-  border-top: 1px solid #0d747c;
+  border-top: 1px solid #290460;
 }
 
 .panel-group .panel-footer {
@@ -5810,43 +5812,43 @@ a.list-group-item:focus {
 }
 
 .panel-group .panel-footer + .panel-collapse .panel-body {
-  border-bottom: 1px solid #0d747c;
+  border-bottom: 1px solid #290460;
 }
 
 .panel-default {
-  border-color: #0d747c;
+  border-color: #290460;
 }
 
 .panel-default > .panel-heading {
   color: #444444;
-  background-color: #18cbd8;
+  background-color: #290460;
   border-color: #0d747c;
 }
 
 .panel-default > .panel-heading + .panel-collapse .panel-body {
-  border-top-color: #0d747c;
+  border-top-color: #290460;
 }
 
 .panel-default > .panel-footer + .panel-collapse .panel-body {
-  border-bottom-color: #0d747c;
+  border-bottom-color: #290460;
 }
 
 .panel-primary {
-  border-color: #ad1d28;
+  border-color: #8e1024;
 }
 
 .panel-primary > .panel-heading {
   color: #ffffff;
-  background-color: #ad1d28;
-  border-color: #ad1d28;
+  background-color: #8e1024;
+  border-color: #8e1024;
 }
 
 .panel-primary > .panel-heading + .panel-collapse .panel-body {
-  border-top-color: #ad1d28;
+  border-top-color: #8e1024;
 }
 
 .panel-primary > .panel-footer + .panel-collapse .panel-body {
-  border-bottom-color: #ad1d28;
+  border-bottom-color: #8e1024;
 }
 
 .panel-success {
@@ -5925,8 +5927,8 @@ a.list-group-item:focus {
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
-  background-color: #0d747c;
-  border: 1px solid #0a565c;
+  background-color: #290460;
+  border: 1px solid #290460;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
@@ -6023,7 +6025,7 @@ body.modal-open,
 
 .modal-content {
   position: relative;
-  background-color: #13a0aa;
+  background-color: #290460;
   border: 1px solid #999999;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 6px;
@@ -6056,7 +6058,7 @@ body.modal-open,
 .modal-header {
   min-height: 16.428571429px;
   padding: 15px;
-  border-bottom: 1px solid #0d747c;
+  border-bottom: 1px solid #290460;
 }
 
 .modal-header .close {
@@ -6077,7 +6079,7 @@ body.modal-open,
   padding: 19px 20px 20px;
   margin-top: 15px;
   text-align: right;
-  border-top: 1px solid #0d747c;
+  border-top: 1px solid #290460;
 }
 
 .modal-footer:before,
