--- a/app_server/views/generic-text.jade
+++ b/app_server/views/generic-text.jade
@@ -8,10 +8,10 @@ block content
   .row
     .col-md-6.col-sm-12
       p
-        |  Welcome to ORCHID, where our love for literature blooms.
-        | <br /><br />
-        |  Our Mission: To cultivate a global community of readers and authors, offering insightful reviews that not only evaluate the quality of books but also celebrate the diversity and richness of literary art.
-        | <br /><br />
-        |  Who We Are: ORCHID is a bouquet of passionate book lovers, critics, and literary enthusiasts. Founded in [Year], we realized that the world of literature is as vast and varied as nature itself. Just like the orchid flower, which represents beauty, strength, and uniqueness, each book holds a distinctive story, waiting to be told and heard.
-        | <br /><br />
-        |  What We Do: At ORCHID, we delve deep into the pages, bringing you unbiased, comprehensive, and engaging reviews spanning across genres, authors, and regions. From the latest bestsellers to hidden gems, our team is dedicated to guiding you through your next literary adventure.
+        | Discover Time in its Finest Form
+        | <br />
+        | At Agenta, we believe that a watch is not just an instrument for keeping time, but a testament to craftsmanship, design, and personal style. From the sweep of a second hand to the elegance of a leather strap, every watch tells a story – and here, we aim to share those stories with you.
+        | <br /> <br />
+        | Our Journey
+        | <br />
+        | Established in 2010, Agenta was born out of a passion for horology and a desire to bring together watch enthusiasts from around the globe. Our founder, [Your Name or Founder's Name], recognized the need for a platform where watch lovers could not only discover the finest timepieces but also learn from genuine user reviews.
