--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -10,7 +10,7 @@ html
     .navbar.navbar-default.navbar-fixed-top
       .container
         .navbar-header
-          a.navbar-brand(href='/') Orchid
+          a.navbar-brand(href='/') Agenta
           button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-main')
             span.icon-bar
             span.icon-bar
