--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -24,6 +24,6 @@ html
       footer
         .row
           .col-xs-12
-            small &copy; Hasritha Reddy 2023
+            small &copy; Agenta 2023
     script(src='/javascripts/jquery-1.11.1.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
